--- a/admin-pins.html
+++ b/admin-pins.html
@@ -86,9 +86,9 @@ if(savedKey !== ADMIN_KEY){
 
   <select id="type">
     <option value="Weekly">Weekly (7 days)</option>
-    <option value="Monthly">Monthly (30 days)</option>
-    <option value="Half-Year">Half-Year (180 days)</option>
-    <option value="Annual">Annual (365 days)</option>
+    <option value="Monthly">Kabeja (30 days)</option>
+    <option value="Half-Year">Kabeje (180 days)</option>
+    <option value="Annual">Kabejest (365 days)</option>
   </select>
 
   <input id="customDays" type="number" placeholder="Or enter custom days (optional)">
