--- a/movie.html
+++ b/movie.html
@@ -13,7 +13,6 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
 <script>
-  // Initialize Firebase
   const firebaseConfig = {
     apiKey: "AIzaSyBGGV9F3Nv13nRJ8t4QCP5Y0IosmKfYz1s",
     authDomain: "busanso-pins.firebaseapp.com",
@@ -28,25 +27,24 @@
 
 <style>
 body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16px}
-h1{margin-bottom:10px;text-align:center}
-.player{width:100%;max-width:800px;margin:0 auto;background:#000}
+h1{text-align:center;margin-bottom:10px}
+.player{max-width:800px;margin:0 auto}
 .player iframe{width:100%;height:56vw;max-height:450px;border:none}
-.details{max-width:800px;margin:16px auto;padding:16px;background:#111;border-radius:12px}
+.details{max-width:800px;margin:16px auto;background:#111;padding:16px;border-radius:12px}
 .meta{color:#aaa;font-size:14px;margin-bottom:10px}
-.actions button{
-  width:100%;padding:12px;margin-top:8px;border:none;border-radius:8px;
-  font-weight:bold;cursor:pointer;font-size:14px;
-}
+.actions button{width:100%;padding:12px;margin-top:8px;border:none;border-radius:8px;font-weight:bold;cursor:pointer}
 .watch{background:#e50914;color:#fff}
-.secondary{background:#222;color:#fff;margin-top:4px}
-.share{background:#555;color:#fff;margin-top:4px}
-.cast span{background:#181818;padding:6px 10px;border-radius:20px;font-size:12px;margin-right:4px;margin-bottom:4px;display:inline-block;}
+.share{background:#555;color:#fff}
+.cast span{background:#181818;padding:6px 10px;border-radius:20px;font-size:12px;margin:4px;display:inline-block}
 
-/* Comment Section */
-#commentsSection{max-width:800px;margin:20px auto;background:#111;padding:16px;border-radius:12px;}
-#commentsList div{margin-bottom:6px;padding:8px 10px;background:#222;border-radius:8px;position:relative;}
-#commentInput{width:100%;padding:8px;border-radius:6px;background:#111;color:#fff;border:none;margin-top:6px;}
-#commentBtn{margin-top:6px;padding:8px 16px;border:none;border-radius:8px;background:#e50914;color:#fff;font-weight:bold;cursor:pointer;}
+/* Comments */
+#commentsSection{max-width:800px;margin:20px auto;background:#111;padding:16px;border-radius:12px}
+#commentsList div{background:#222;padding:8px 10px;border-radius:8px;margin-bottom:6px;position:relative}
+#usernameInput,#commentInput{
+  width:100%;padding:8px;border-radius:6px;background:#111;color:#fff;border:none;margin-bottom:6px
+}
+#commentBtn{padding:8px 16px;border:none;border-radius:8px;background:#e50914;color:#fff;font-weight:bold;cursor:pointer}
+#commentMsg{margin-top:6px;font-size:13px}
 </style>
 </head>
 
@@ -77,27 +75,29 @@ if(!pin || !exp || Date.now() > exp){
     <button class="share" onclick="copyToClipboard()">📋 Copy Info</button>
   </div>
 
-  <div class="section">
-    <h3>Synopsis</h3>
-    <p id="synopsis"></p>
-  </div>
+  <h3>Synopsis</h3>
+  <p id="synopsis"></p>
 
-  <div class="section">
-    <h3>Cast</h3>
-    <div class="cast" id="cast"></div>
-  </div>
+  <h3>Cast</h3>
+  <div class="cast" id="cast"></div>
 </div>
 
-<!-- ===== COMMENT SECTION ===== -->
+<!-- ===== COMMENTS ===== -->
 <div id="commentsSection">
   <h3>Comments</h3>
+
+  <input id="usernameInput" placeholder="Your nickname">
+
   <div id="commentsList"></div>
+
   <textarea id="commentInput" placeholder="Write your comment"></textarea>
   <button id="commentBtn">Post Comment</button>
+
+  <div id="commentMsg"></div>
 </div>
 
 <script>
-// ----- Get movie ID -----
+// ----- Movie ID -----
 const params = new URLSearchParams(location.search);
 const id = params.get("id");
 if(!id) location.replace("movies.html");
@@ -106,110 +106,79 @@ if(!id) location.replace("movies.html");
 const movie = MOVIES.find(m=>m.id===id);
 if(!movie) location.replace("movies.html");
 
-// ----- Populate info -----
-document.getElementById("title").textContent = movie.title;
-document.getElementById("meta").textContent = `${movie.country} • ${movie.year} • ${movie.duration || ''}`;
-document.getElementById("synopsis").textContent = movie.synopsis || "";
-const castDiv = document.getElementById("cast");
+// ----- Populate -----
+title.textContent = movie.title;
+meta.textContent = `${movie.country} • ${movie.year}`;
+synopsis.textContent = movie.synopsis || "";
 if(movie.cast) movie.cast.forEach(c=>{
-  const span = document.createElement("span");
-  span.textContent = c;
-  castDiv.appendChild(span);
+  const s=document.createElement("span");s.textContent=c;cast.appendChild(s);
 });
 
-// ----- Normalize video URLs -----
+// ----- Video -----
 function normalizeVideo(url){
-  if(!url) return null;
   try{
     if(url.includes("youtube.com/watch")) return "https://www.youtube.com/embed/"+new URL(url).searchParams.get("v");
-    if(url.includes("youtu.be/")) return "https://www.youtube.com/embed/"+url.split("youtu.be/")[1].split("?")[0];
-    if(url.includes("youtube.com/embed")) return url;
-    if(url.includes("vimeo.com")) return "https://player.vimeo.com/video/"+url.split("/").pop().split("?")[0];
+    if(url.includes("youtu.be")) return "https://www.youtube.com/embed/"+url.split("/").pop();
+    if(url.includes("vimeo.com")) return "https://player.vimeo.com/video/"+url.split("/").pop();
     if(url.includes("/d/")) return "https://drive.google.com/file/d/"+url.split("/d/")[1].split("/")[0]+"/preview";
-    if(url.includes("drive.google.com/open")) return "https://drive.google.com/file/d/"+(new URL(url).searchParams.get("id"))+"/preview";
     return url;
-  }catch(e){return null;}
+  }catch{return null;}
 }
 
-// ----- Play movie -----
-function playMovie(){
-  if(movie.type !== "free") {
-    location.href = "packages.html"; // redirect for premium
-    return;
-  }
-  const embed = normalizeVideo(movie.video);
-  if(!embed){ alert("Video not supported"); return; }
-  document.getElementById("player").innerHTML = `<iframe src="${embed}" allow="autoplay; fullscreen" allowfullscreen></iframe>`;
-}
-document.getElementById("watchBtn").onclick = playMovie;
-
-// ----- Share functions -----
-const SITE_URL = location.origin + "/movies.html";
-function shareWhatsApp(){
-  location.href = `https://wa.me/?text=${encodeURIComponent(movie.title + "\n" + movie.synopsis + "\nWatch on BUSANSO: " + SITE_URL)}`;
-}
-function shareIMO(){
-  location.href = `imo://send?text=${encodeURIComponent(movie.title + "\n" + movie.synopsis + "\nWatch on BUSANSO: " + SITE_URL)}`;
-}
-function shareTikTok(){
-  alert("TikTok share is not native, you can copy and post manually.");
-}
-function copyToClipboard(){
-  const text = `${movie.title}\n${movie.synopsis}\nWatch on BUSANSO: ${SITE_URL}`;
-  navigator.clipboard.writeText(text).then(()=>alert("Movie info copied!"));
-}
-
-// ===== COMMENT SECTION LOGIC =====
-const commentsRef = firebase.database().ref("comments/" + movie.id);
-
-// Helper: get or set username
-function getUsername() {
-  let name = localStorage.getItem("username");
-  if (!name) {
-    name = prompt("Enter a nickname to comment:");
-    if(name) localStorage.setItem("username", name.trim());
-  }
-  return name;
-}
-
-// Post comment
-document.getElementById("commentBtn").onclick = () => {
-  const text = document.getElementById("commentInput").value.trim();
-  if(!text) return alert("Type something first");
-  const username = getUsername();
-  if(!username) return alert("Username required");
-  commentsRef.push({ user: username, text, timestamp: Date.now() });
-  document.getElementById("commentInput").value = "";
+watchBtn.onclick=()=>{
+  if(movie.type!=="free") return location.href="packages.html";
+  const e=normalizeVideo(movie.video);
+  if(e) player.innerHTML=`<iframe src="${e}" allowfullscreen></iframe>`;
 };
 
-// Display comments live with admin delete
-commentsRef.on("value", snapshot => {
-  const container = document.getElementById("commentsList");
-  container.innerHTML = "";
-  snapshot.forEach(child => {
-    const c = child.val();
-    const div = document.createElement("div");
-    div.innerHTML = `<strong>${c.user}</strong>: ${c.text}`;
+// ----- Share -----
+const SITE_URL=location.origin+"/movies.html";
+function shareWhatsApp(){location.href=`https://wa.me/?text=${encodeURIComponent(movie.title+"\n"+SITE_URL)}`;}
+function shareIMO(){location.href=`imo://send?text=${encodeURIComponent(movie.title+"\n"+SITE_URL)}`;}
+function shareTikTok(){alert("Copy and post manually.");}
+function copyToClipboard(){navigator.clipboard.writeText(movie.title+"\n"+SITE_URL);}
 
-    // Admin delete button (replace YOUR_ADMIN_PIN with your admin PIN)
-    const isAdmin = localStorage.getItem("activePIN") === "Orion885";
-    if(isAdmin){
-      const delBtn = document.createElement("button");
-      delBtn.textContent = "🗑 Delete";
-      delBtn.style.position = "absolute";
-      delBtn.style.right = "8px";
-      delBtn.style.top = "8px";
-      delBtn.style.background="#e50914";
-      delBtn.style.color="#fff";
-      delBtn.style.border="none";
-      delBtn.style.borderRadius="6px";
-      delBtn.style.padding="2px 6px";
-      delBtn.style.cursor="pointer";
-      delBtn.onclick = () => child.ref.remove();
-      div.appendChild(delBtn);
+// ===== COMMENTS LOGIC =====
+const commentsRef=firebase.database().ref("comments/"+movie.id);
+const usernameInput=document.getElementById("usernameInput");
+const commentInput=document.getElementById("commentInput");
+const commentMsg=document.getElementById("commentMsg");
+
+// Load nickname
+const savedName=localStorage.getItem("username");
+if(savedName) usernameInput.value=savedName;
+
+// Post comment
+commentBtn.onclick=()=>{
+  const name=usernameInput.value.trim();
+  const text=commentInput.value.trim();
+  commentMsg.style.color="#ffb400";
+
+  if(!name){commentMsg.textContent="Please enter a nickname.";return;}
+  if(!text){commentMsg.textContent="Write a comment first.";return;}
+
+  localStorage.setItem("username",name);
+  commentsRef.push({user:name,text,timestamp:Date.now()});
+  commentInput.value="";
+  commentMsg.style.color="#00ff66";
+  commentMsg.textContent="Comment posted.";
+};
+
+// Display comments
+commentsRef.on("value",snap=>{
+  commentsList.innerHTML="";
+  snap.forEach(c=>{
+    const d=document.createElement("div");
+    d.innerHTML=`<strong>${c.val().user}</strong>: ${c.val().text}`;
+
+    if(localStorage.getItem("activePIN")==="Orion885"){
+      const b=document.createElement("button");
+      b.textContent="🗑";
+      Object.assign(b.style,{position:"absolute",right:"6px",top:"6px",background:"#e50914",color:"#fff",border:"none",borderRadius:"6px"});
+      b.onclick=()=>c.ref.remove();
+      d.appendChild(b);
     }
-
-    container.appendChild(div);
+    commentsList.appendChild(d);
   });
 });
 </script>
